<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/relativeLayout"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/date_edit_text"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adding_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:background="@drawable/rect_edit_text"
                android:elevation="5dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/diag_date"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="18sp" />

        <EditText
            android:id="@+id/illness_name_edit_text"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/date_edit_text"
            android:layout_below="@+id/date_edit_text"
            android:layout_marginTop="35dp"
            android:background="@drawable/edit_text"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/illness_name"
            android:inputType="textCapWords|textPersonName"
            android:textSize="24sp" />

            <TextView
                android:id="@+id/adding_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="29dp"
                android:text="@string/new_illness"
                android:textSize="24sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/illness_name_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_white_button"
            android:elevation="5dp"
            android:padding="15dp"
            android:text="отменить"
            android:textColor="@color/black"
            android:textSize="18sp" />

        </RelativeLayout>

</ScrollView>